@@ -1,5 +1,16 @@
 2004-11-24  Dalibor Topic  <robilad@kaffe.org>
 
+	* libraries/javalib/java/awt/geom/AffineTransform.java:
+        Resynced with GNU Classpath.
+
+	2004-11-16  Sven de Marothy  <sven@physto.se>
+
+        * java/awt/geom/AffineTransform.java,
+        (inverseTransform): Fixed bug and simplified code.
+        (createTransformedShape): Return null on null parameter.
+
+2004-11-24  Dalibor Topic  <robilad@kaffe.org>
+
 	* libraries/javalib/java/util/Collections.java:
         Resynced with GNU Classpath.
 
